# capiti

./: .gitignore  CHANGELOG.md  LICENSE  PLAN.md  README.md  pyproject.toml  valve_manual.tsv
capiti/: __init__.py  cli.py  interrupt.py  listen.py  seq.py  watch.py
capiti/_model/: capiti.onnx
capiti/_model/C/: README.md  capiti.meta.json  gate.json  threshold_schedule_by_K.tsv
capiti/_model/E/: README.md  capiti.meta.json  gate.json  threshold_schedule_by_K.tsv
capiti/_model/ab9/: capiti.meta.json  capiti.onnx  gate.json  threshold_schedule_by_K.tsv
configs/: targets-C.review.tsv  targets-C.tsv  targets-E.review.tsv  targets-E.tsv  targets.tsv
configs/envs/: README.md  baselines.yml  esmfold.yml  pi.yml
configs/runs/: v1.yaml
docs/: adding_a_target.md  capiti.summary.txt  led_indicator.md  resource_audit.md  streaming_demos.md  streaming_prefix_augmentation.md
docs/benchmark/: CE_summary.md  v2_variants_comparison.md  v3_writeup.md
pi/: README.md  capiti_interrupt.py
scripts/: build_gate_bundle.py  compare_aug_configs.py  graceorffinder.py  gracepermute.py  gracetranslate.py  pick_best_structures.py  run_prefix_sweep.py  sbatch_aug_c4.sh  sbatch_benchmark_only.sh  sbatch_fold_test.sh  sbatch_mpnn_array.sh  sbatch_prefix_aug_sweep.sh  sbatch_prefix_sweep_v3.sh  sbatch_regen_downstream.sh  sbatch_rerun_K_aggregation.sh  sbatch_train.sh  sbatch_train_prefix_aug.sh  sbatch_variants.sh  setup_set.py  test_graceorffinder.py  test_gracetranslate.py  test_pipeline.py
src/data/: assemble_dataset.py  build_residue_map.py  fetch_active_sites.py  fetch_decoys.py  generate_mpnn_variants.py  generate_negatives.py  residue_map.py
src/eval/: benchmark.py  plots.py  scorers.py
src/oracle/: fold_esmfold.py
src/student/: export_onnx.py  model.py  train.py  visualize.py
(+49 files in other folders)
